# GenIGA

./: .gitignore  README.md  TRAINER_README.md  conditioning_example.py  ddpm_trainer.py  deform.ipynb  diff_iga.py  example_usage.py  generate_dataset.py  pyproject.toml  solve-helmholz.ipynb  solve-pde.ipynb  solve-poisson.ipynb  testing_images.ipynb
.github/workflows/: test.yml
experiments/: README.md
geniga/: __init__.py  ddpm_trainer.py
geniga/geometry/: datasets.py  random.py
geniga/nn/: diff.py
geniga/physics/: __init__.py  validation.py
scripts/: generate_dataset.py  solve-pde.ipynb
tests/: test_conditioning.py  test_residual_computation.py
