[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "geniga"
version = "0.1.0"
description = "Generative IGA utilities, geometry generation, and neural network models for isogeometric analysis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [ { name = "Ion G-Ion" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch>=2.0",
    "h5py",
    "numpy",
    "scipy",
    "einops>=0.6",
    "pyiga @ git+https://github.com/c-f-h/pyiga.git",
    "pyyaml>=6.0",
    "plotly>=5.0",
    "tqdm",
    "timm",
    "matplotlib"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["geniga"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
